fix alignment

--- a/src/styles/typography/icons/_icons.scss
+++ b/src/styles/typography/icons/_icons.scss
@@ -4,19 +4,19 @@
   height: 1rem;
 
   &--xl {
-    margin-top: 0.4rem;
+    margin-top: 0.3rem;
     width: 1.5rem;
     height: 1.5rem;
   }
 
   &--l {
-    margin-top: 0.4rem;
+    margin-top: 0.2rem;
     width: 1.4rem;
     height: 1.4rem;
   }
 
   &--m {
-    margin-top: 0.4rem;
+    margin-top: 0.3rem;
     width: 1rem;
     height: 1rem;
   }
